kanbas first iteration

--- a/public/kanbas/courses/settings.html
+++ b/public/kanbas/courses/settings.html
@@ -13,9 +13,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="./profile-navigation.html">Account</a></li>
+                <li><a href="../profile-navigation.html">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="course-navigation.html">Courses</a></li>
+                <li><a href="../course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -26,13 +26,13 @@
         </td>
         <td>
             <ul>
-                <li><a href="./home.html">Home</a></li>
+                <li><a href="../home.html">Home</a></li>
                 <li><a href="#">Modules</a></li>
                 <li><a href="#">Piazza</a></li>
                 <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="./assignments/index.html">Assignments</a></li>
+                <li><a href="../assignments/index.html">Assignments</a></li>
                 <li><a href="#">Quizzes</a></li>
-                <li><a href="#">Grades</a></li>
+                <li><a href="../grades.html">Grades</a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Panopto Video</a></li>
                 <li><a href="#">Discussions</a></li>
@@ -43,8 +43,22 @@
                 <li><a href="#">Outcomes</a></li>
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="./courses/settings.html">Settings</a></li>
+                <li><a href="#">Settings</a></li>
             </ul>
+        </td>
+
+        <td>
+            <div style="display: flex; justify-content: space-between; border-bottom: 1px solid black; padding: 10px 0;">
+                <a href="course_details.html">Course Details</a> &nbsp;| &nbsp;
+                <a href="#">Sections</a> &nbsp;|&nbsp;
+                <a href="navigation.html">Navigation</a> &nbsp;|&nbsp;
+                <a href="#">Apps</a> &nbsp;|&nbsp;
+                <a href="#">Feature Options</a> &nbsp;|&nbsp;
+                <a href="#">Integrations</a>
+            </div>
+
+            <p>Select an option from the tab group to visit that page.</p>
+
         </td>
     </tr>
 </table>
