--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -32,9 +32,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="#">Account</a></li>
+                <li><a href="./profile-navigation.html">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="./course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -49,7 +49,7 @@
                 <li><a href="#">Modules</a></li>
                 <li><a href="#">Piazza</a></li>
                 <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="#">Assignments</a></li>
+                <li><a href="./assignments/index.html">Assignments</a></li>
                 <li><a href="#">Quizzes</a></li>
                 <li><a href="./grades.html">Grades</a></li>
                 <li><a href="#">People</a></li>
@@ -62,7 +62,7 @@
                 <li><a href="#">Outcomes</a></li>
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="./courses/settings.html">Settings</a></li>
             </ul>
         </td>
 
@@ -121,14 +121,14 @@
                     <td>86</td>
                     <td>100</td>
                     <td>94</td>
-                    <td>85</td>
+                    <td><input type="text" value="85" style="width: 50px; text-align: center"></td>
                     <td>84</td>
                     <td>92</td>
                 </tr>
 
                 <tr>
                     <td>Luke Skywalker</td>
-                    <td>99</td>
+                    <td><input type="text" value="99" style="width: 50px; text-align: center"></td>
                     <td>88</td>
                     <td>97</td>
                     <td>82</td>
@@ -144,21 +144,21 @@
                     <td>83</td>
                     <td>99</td>
                     <td>94</td>
-                    <td>98</td> <!-- Empty cell for missing data -->
+                    <td>98</td>
                     <td>86</td>
-                    <td>85</td> <!-- Empty cell for missing data -->
-                    <td>86</td>
+                    <td>85</td>
+                    <td><input type="text" value="86" style="width: 50px; text-align: center"></td>
                     <td>80</td>
                     <td>84</td>
                 </tr>
                 <tr>
                     <td>Lando Calresian</td>
                     <td>83</td>
-                    <td>92</td>
+                    <td><input type="text" value="92" style="width: 50px; text-align: center"></td>
                     <td>80</td>
-                    <td>80</td> <!-- Empty cell for missing data -->
+                    <td>80</td>
                     <td>92</td>
-                    <td>92</td> <!-- Empty cell for missing data -->
+                    <td>92</td>
                     <td>94</td>
                     <td>87</td>
                     <td>95</td>
@@ -179,22 +179,22 @@
                     <td>Darth Vader</td>
                     <td>81</td>
                     <td>81</td>
-                    <td>96</td>
-                    <td>80</td> <!-- Empty cell for missing data -->
+                    <td><input type="text" value="96" style="width: 50px; text-align: center"></td>
+                    <td>80</td>
                     <td>89</td>
-                    <td>88</td> <!-- Empty cell for missing data -->
+                    <td>88</td>
                     <td>82</td>
                     <td>80</td>
                     <td>82</td>
                 </tr>
                 <tr>
                     <td>Obi-Wan Kenobi</td>
-                    <td>85</td>
+                    <td><input type="text" value="85" style="width: 50px; text-align: center"></td>
                     <td>99</td>
                     <td>87</td>
-                    <td>82</td> <!-- Empty cell for missing data -->
+                    <td>82</td>
                     <td>88</td>
-                    <td>83</td> <!-- Empty cell for missing data -->
+                    <td>83</td>
                     <td>88</td>
                     <td>92</td>
                     <td>80</td>
@@ -202,11 +202,11 @@
                 <tr>
                     <td>R2-D2</td>
                     <td>81</td>
-                    <td>92</td>
-                    <td>82</td>
-                    <td>86</td> <!-- Empty cell for missing data -->
+                    <td><input type="text" value="92" style="width: 50px; text-align: center"></td>
+                    <td><input type="text" value="82" style="width: 50px; text-align: center"></td>
+                    <td>86</td>
                     <td>83</td>
-                    <td>84</td> <!-- Empty cell for missing data -->
+                    <td><input type="text" value="84" style="width: 50px; text-align: center"></td>
                     <td>98</td>
                     <td>85</td>
                     <td>96</td>
@@ -216,9 +216,9 @@
                     <td>94</td>
                     <td>98</td>
                     <td>83</td>
-                    <td>83</td> <!-- Empty cell for missing data -->
+                    <td>83</td>
                     <td>100</td>
-                    <td>96</td> <!-- Empty cell for missing data -->
+                    <td>96</td>
                     <td>96</td>
                     <td>85</td>
                     <td>87</td>
@@ -228,9 +228,9 @@
                     <td>80</td>
                     <td>89</td>
                     <td>99</td>
-                    <td>89</td> <!-- Empty cell for missing data -->
+                    <td>89</td>
                     <td>96</td>
-                    <td>85</td> <!-- Empty cell for missing data -->
+                    <td>85</td>
                     <td>96</td>
                     <td>92</td>
                     <td>85</td>
@@ -240,9 +240,9 @@
                     <td>82</td>
                     <td>88</td>
                     <td>95</td>
-                    <td>100</td> <!-- Empty cell for missing data -->
-                    <td>93</td>
-                    <td>98</td> <!-- Empty cell for missing data -->
+                    <td>100</td>
+                    <td><input type="text" value="93" style="width: 50px; text-align: center"></td>
+                    <td>98</td>
                     <td>85</td>
                     <td>87</td>
                     <td>99</td>
