--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -16,9 +16,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="#">Account</a></li>
+                <li><a href="./profile-navigation.html">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="./course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -33,7 +33,7 @@
                 <li><a href="#">Modules</a></li>
                 <li><a href="#">Piazza</a></li>
                 <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="#">Assignments</a></li>
+                <li><a href="./assignments/index.html">Assignments</a></li>
                 <li><a href="#">Quizzes</a></li>
                 <li><a href="./grades.html">Grades</a></li>
                 <li><a href="#">People</a></li>
@@ -46,7 +46,7 @@
                 <li><a href="#">Outcomes</a></li>
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="./courses/settings.html">Settings</a></li>
             </ul>
         </td>
 
