--- a/public/kanbas/kanbas-navigation.html
+++ b/public/kanbas/kanbas-navigation.html
@@ -13,7 +13,7 @@
         <tr>
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="./profile-navigation.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="./course-navigation.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
