--- a/public/kanbas/profile-navigation.html
+++ b/public/kanbas/profile-navigation.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="../course-navigation.html">Courses</a></li>
+                <li><a href="course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -27,7 +27,7 @@
         <td>
             <ul>
                 <li><a href="#">Notifications</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="./profile/index.html">Profile</a></li>
                 <li><a href="#">Files</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">ePortfolios</a></li>
@@ -36,27 +36,6 @@
                 <li><a href="#">Qwickly Course Tool</a></li>
                 <li><a href="#">Global Announcements</a></li>
             </ul>
-        </td>
-
-        <td>
-            <p>Jose Annunziato's Profile</p>
-            <hr>
-
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <h1>Jose Annunziato</h1>
-                <a href="./edit.html"><button>Edit Profile</button></a>
-            </div>
-
-
-
-            <h3>Contact</h3>
-            <p>No registered services, you can add some on the <a href="../courses/settings.html">settings</a> page. </p>
-
-            <h3>Biography</h3>
-            <p>Faculty, Software Engineer, AI, Space and renewables enthusiast.</p>
-
-            <h3>Links</h3>
-            <a href="www.youtube.com">YouTube</a>
         </td>
     </tr>
 </table>
