--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -96,6 +96,7 @@
             <label for="submission-type">Submission Type</label> <br>
             <select id="submission-type">
                 <option value="publishAll">Online</option>
+                <option value="publishAll">In-Person</option>
             </select>
 
             <label>Online Entry Options</label>
