--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -32,9 +32,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="./profile-navigation.html">Account</a></li>
+                <li><a href="profile-navigation.html">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="./course-navigation.html">Courses</a></li>
+                <li><a href="course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -45,11 +45,11 @@
         </td>
         <td>
             <ul>
-                <li><a href="./home.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#">Modules</a></li>
                 <li><a href="#">Piazza</a></li>
                 <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="./assignments/index.html">Assignments</a></li>
+                <li><a href="assignments/index.html">Assignments</a></li>
                 <li><a href="#">Quizzes</a></li>
                 <li><a href="./grades.html">Grades</a></li>
                 <li><a href="#">People</a></li>
@@ -62,7 +62,7 @@
                 <li><a href="#">Outcomes</a></li>
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="./courses/settings.html">Settings</a></li>
+                <li><a href="courses/settings.html">Settings</a></li>
             </ul>
         </td>
 
@@ -76,6 +76,7 @@
                 <option value="publishAll">Export</option>
                 <option value="publishOne">Import</option>
             </select>
+            <button>Configure</button>
 
             <h3>Student Names</h3>
             <input id="text-student-name" placeholder="Search Students"/><br/>
