--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -16,9 +16,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="./profile-navigation.html">Account</a></li>
+                <li><a href="profile-navigation.html">Account</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="./course-navigation.html">Courses</a></li>
+                <li><a href="course-navigation.html">Courses</a></li>
                 <li><a href="#">Calendar</a></li>
                 <li><a href="#">Inbox</a></li>
                 <li><a href="#">History</a></li>
@@ -33,9 +33,9 @@
                 <li><a href="#">Modules</a></li>
                 <li><a href="#">Piazza</a></li>
                 <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="./assignments/index.html">Assignments</a></li>
+                <li><a href="assignments/index.html">Assignments</a></li>
                 <li><a href="#">Quizzes</a></li>
-                <li><a href="./grades.html">Grades</a></li>
+                <li><a href="grades.html">Grades</a></li>
                 <li><a href="#">People</a></li>
                 <li><a href="#">Panopto Video</a></li>
                 <li><a href="#">Discussions</a></li>
@@ -46,7 +46,7 @@
                 <li><a href="#">Outcomes</a></li>
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="#">Syllabus</a></li>
-                <li><a href="./courses/settings.html">Settings</a></li>
+                <li><a href="courses/settings.html">Settings</a></li>
             </ul>
         </td>
 
@@ -104,13 +104,13 @@
                         SLIDES
                         <ul>
                             <li>
-                                <a href="#">Introduction to Web Development Links to an external site.</a>
+                                <a target="_blank" href="https://docs.google.com/presentation/d/1yb_fQd5MhVuFczb5F5II0CoDkVJALFqxUnuwPAXiOAU/edit?usp=sharing">Introduction to Web Development Links to an external site.</a>
                             </li>
                             <li>
-                                <a href="#">Creating an HTTP server with Node.js links to an external site.</a>
+                                <a target="_blank" href="https://docs.google.com/presentation/d/16yDwIH8np-tQL85g4bpmrsDfO8LaW38jr-fMQirLnoQ/edit?usp=sharing">Creating an HTTP server with Node.js links to an external site.</a>
                             </li>
                             <li>
-                                <a href="#">Creating a React Application Links to an external site.</a>
+                                <a target="_blank" href="https://docs.google.com/presentation/d/10B3jLiJ8-HMsA6TPq9JuWfJzsvX9SFnYVuhthrQbFwU/edit?usp=sharing">Creating a React Application Links to an external site.</a>
                             </li>
                         </ul>
                     </li>
