--- a/public/labs/a1/index.html
+++ b/public/labs/a1/index.html
@@ -101,7 +101,7 @@ Loading an image from the internet:<br/>
 
 Loading a local image:<br/>
 
-<img src="teslabot.jpg"
+<img src="../../teslabot.jpg"
      height="200px"/>
 
 <!--Forms-->
