--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>Shubhang - Web Dev</title>
 </head>
 <body>
@@ -47,7 +48,11 @@
 
 
 <div>
-    → <a href="./labs/a1/index.html"> Labs </a>
+    → <a href="./labs/a1/index.html"> Labs A1</a>
+</div>
+
+<div>
+    → <a href="./labs/a2/index.html"> Labs A2</a>
 </div>
 
 <div>
