--- a/public/kanbas/kanbas-navigation.html
+++ b/public/kanbas/kanbas-navigation.html
@@ -2,28 +2,25 @@
 <html lang="en">
 <head>
     <title>Shubhang - Kanbas</title>
+    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="kanbas-navigation.css">
 </head>
 <body>
-<style>
-    table td {
-        vertical-align: top;
-    }
-</style>
-    <table style="width: 100%" class="top-align">
-        <tr>
-            <td>
-                <ul>
-                    <li><a href="./profile-navigation.html">Account</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="./course-navigation.html">Courses</a></li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Inbox</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Commmons</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+<div class="kanbas-nav">
+    <ul>
+        <li><a href="./profile/index.html"><i class="fas fa-user"></i> Account</a></li>
+        <li><a href="#"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
+        <li><a href="./course-navigation.html"><i class="fas fa-book" style="color: red"></i> Courses</a></li>
+        <li><a href="#"><i class="fas fa-calendar-alt" style="color: red"></i> Calendar</a></li>
+        <li><a href="#"><i class="fas fa-inbox" style="color: red"></i> Inbox</a></li>
+        <li><a href="#"><i class="fas fa-history" style="color: red"></i> History</a></li>
+        <li><a href="#"><i class="fas fa-palette" style="color: red"></i> Studio</a></li>
+        <li><a href="#"><i class="fas fa-images" style="color: red"></i> Commons</a></li>
+        <li><a href="#"><i class="fas fa-question-circle" style="color: red"></i> Help</a></li>
+    </ul>
+</div>
 </body>
+</html>
