--- a/public/kanbas/courses/settings.html
+++ b/public/kanbas/courses/settings.html
@@ -88,22 +88,22 @@
 
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="course_details.html">Course Details</a>
+                        <a class="nav-link" style="color: red;" aria-current="page" href="course_details.html">Course Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sections</a>
+                        <a class="nav-link" style="color: red;" href="#">Sections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="navigation.html">Navigation</a>
+                        <a class="nav-link" style="color: red;" href="navigation.html">Navigation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Apps</a>
+                        <a class="nav-link" style="color: red;" href="#">Apps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Feature Options</a>
+                        <a class="nav-link" style="color: red;" href="#">Feature Options</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Integrations</a>
+                        <a class="nav-link" style="color: red;" href="#">Integrations</a>
                     </li>
                 </ul>
 
