fixed margin in lab2

--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -143,13 +143,9 @@
             wd-bg-color-yellow">
     Margin left right
 </div>
-<div class="wd-margin-all-around
-            wd-padding-fat
-            border-fat
-            wd-border-yellow
-            wd-border-solid
-            wd-bg-color-blue
-            wd-fg-color-white">
+<div
+        class="wd-margin-all-around wd-padding-fat wd-border-fat wd-border-yellow wd-border-solid wd-bg-color-blue wd-fg-color-white"
+>
     Margin all around
 </div>
 
