--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 </div>
 
 <div>
-    → <a href="./kanbas/kanbas-navigation.html"> Kanbas </a>
+    → <a href="kanbas/sidebars/k-nav.html"> Kanbas </a>
 </div>
 
 
