--- a/public/kanbas/course-navigation.html
+++ b/public/kanbas/course-navigation.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="kanbas-navigation.css">
-    <link rel="stylesheet" href="course-navigation.css">
+    <link rel="stylesheet" href="sidebars/kanbas-navigation.css">
+    <link rel="stylesheet" href="sidebars/course-navigation.css">
 </head>
 <body>
 <style>
@@ -35,13 +35,13 @@
         <td>
             <div class="course-nav">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="courses/home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
                     <li><a href="./assignments/index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="./grades.html">Grades</a></li>
+                    <li><a href="courses/grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
