--- a/public/kanbas/courses/navigation.html
+++ b/public/kanbas/courses/navigation.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="../kanbas-navigation.css">
-    <link rel="stylesheet" href="../course-navigation.css">
+    <link rel="stylesheet" href="../sidebars/kanbas-navigation.css">
+    <link rel="stylesheet" href="../sidebars/course-navigation.css">
 
 </head>
 <body>
@@ -44,13 +44,13 @@
         <td>
             <div class="course-nav">
                 <ul>
-                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
                     <li><a href="../assignments/index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="../grades.html">Grades</a></li>
+                    <li><a href="grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
@@ -102,7 +102,7 @@
             <div class="border p-3 mb-4">
                 <h4>Drag and drop items to reorder them in the course navigation.</h4>
                 <div class="list-group list-group-bordered">
-                    <a href="../home.html" class="list-group-item list-group-item-action">
+                    <a href="home.html" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">Home</h5>
                             <div>
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="../grades.html" class="list-group-item list-group-item-action">
+                    <a href="grades.html" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">Grades</h5>
                             <div>
