--- a/public/kanbas/courses/grades.html
+++ b/public/kanbas/courses/grades.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Shubhang - Kanbas</title>
-    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.min.css">
     <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
     <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="kanbas-navigation.css">
-    <link rel="stylesheet" href="course-navigation.css">
+    <link rel="stylesheet" href="../sidebars/kanbas-navigation.css">
+    <link rel="stylesheet" href="../sidebars/course-navigation.css">
 
     <style>
         table td {
@@ -41,9 +41,9 @@
         <td>
             <div class="kanbas-nav">
                 <ul>
-                    <li><a href="./profile/index.html"><i class="fas fa-user"></i> Account</a></li>
-                    <li><a href="./dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
-                    <li><a href="course-navigation.html" class="active"><i class="fas fa-book" style="color: red"></i>
+                    <li><a href="../profile/index.html"><i class="fas fa-user"></i> Account</a></li>
+                    <li><a href="../dashboard/index.html"><i class="fas fa-tachometer-alt" style="color: red"></i> Dashboard</a></li>
+                    <li><a href="../course-navigation.html" class="active"><i class="fas fa-book" style="color: red"></i>
                         Courses</a></li>
                     <li><a href="#"><i class="fas fa-calendar-alt" style="color: red"></i> Calendar</a></li>
                     <li><a href="#"><i class="fas fa-inbox" style="color: red"></i> Inbox</a></li>
@@ -61,7 +61,7 @@
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
-                    <li><a href="assignments/index.html">Assignments</a></li>
+                    <li><a href="../assignments/index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
                     <li><a class="active" href="#">Grades</a></li>
                     <li><a href="#">People</a></li>
@@ -74,7 +74,7 @@
                     <li><a href="#">Outcomes</a></li>
                     <li><a href="#">Collaborations</a></li>
                     <li><a href="#">Syllabus</a></li>
-                    <li><a href="courses/settings.html">Settings</a></li>
+                    <li><a href="settings.html">Settings</a></li>
                 </ul>
 
             </div>
