--- a/public/kanbas/dashboard/index.html
+++ b/public/kanbas/dashboard/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="../kanbas-navigation.css">
-    <link rel="stylesheet" href="../course-navigation.css">
+    <link rel="stylesheet" href="../sidebars/kanbas-navigation.css">
+    <link rel="stylesheet" href="../sidebars/course-navigation.css">
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
@@ -263,7 +263,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -281,7 +281,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -299,7 +299,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -317,7 +317,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -335,7 +335,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -353,7 +353,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -371,7 +371,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -389,7 +389,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
@@ -408,7 +408,7 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <div class="card-body" style="padding-bottom: 50px;">
-                                <a href="../home.html" style="text-decoration: none; display: block;">
+                                <a href="../courses/home.html" style="text-decoration: none; display: block;">
                                     <h5 class="card-title">Course Title</h5>
                                     <p class="card-text" style="font-size: 14px;">Term, Year, Section</p>
                                 </a>
